# chatybe

./: .env  .env.example  .gitignore  Cargo.toml
docker/: docker-compose.yml
migrations/2024-03-24-090814_create_users/: up.sql
src/: connection.rs  kcloak.rs  main.rs  model.rs  schema.rs
src/routes/: signin.rs  signup.rs
