[package]
name = "chatybe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
keycloak = "21.0.102"
reqwest = "0.11.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3.30"
